fix horizontal scroll issues

--- a/_styles/heading.scss
+++ b/_styles/heading.scss
@@ -12,6 +12,7 @@ h6 {
   font-weight: var(--semi-bold);
   text-align: left;
   letter-spacing: 1px;
+  word-break: break-all;
 }
 
 h1 {
